using ShelfMarket.Domain.Entities;

namespace ShelfMarket.Application.Abstract;

public interface IShelfTypeRepository : IRepository<ShelfType>
{
}
